# Counsly

./: .env.example  .gitignore  .impeccable.md  .mcp.json  .vercelignore  AGENTS.md  CLAUDE.md  DESIGN.md  FRAMEWORK.md  PRD-v2_1.md  PRD.md  TIMELINE.md  edits.md  geocode_stations.py  requirements.txt  review_panel_process.md  review_panel_report.md  skills-lock.json  vercel.json
ML/: README.md  (+1 more)
backend/: .env.example  __init__.py  community.py  config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
backend/api/: index.py  requirements.txt
backend/app/: config.py  main.py
backend/migrations/: 001_initial_schema.sql  002_launch_schema_gaps.sql  005_predicted_closing_ranks.sql  006_merge_sca_into_sc.sql
backend/routes/: __init__.py  admin.py  auth.py  choices.py  client_logging.py  compare.py  dataset.py  explore.py  financials.py  guidance.py  logging.py  maps.py  notifications.py  payments.py  rate_limiter.py  reporting.py  rounds.py  scraping.py  trends.py  workspace.py
backend/scripts/: load_cutoffs.py  load_predictions.py  reference_validate.py  seed_app_config.py  seed_branches.py  seed_college_branches.py  seed_colleges.py  seed_community_seats.py  seed_cutoffs.py  seed_rank_lookup.py  seed_tfc_locations.py  seed_utils.py
backend/tests/: __init__.py  test_auth.py  test_auth_helpers.py  test_auth_logic.py  test_backend.py  test_config.py  test_launch_readiness.py  test_logging_helpers.py  test_maps.py  test_operations_helpers.py  test_payments_helpers.py  test_route_contract.py  test_startup.py  test_workspace_helpers.py
(+904 files in other folders)
